--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -1,4 +1,5 @@
 <form class="search-form" id="search-form">
   <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
+  <button type="submit" class="submit">Search image</button>
 </form>
   
