added load more btn

--- a/src/templates/gallery.hbs
+++ b/src/templates/gallery.hbs
@@ -1,8 +1,8 @@
-<ul class="gallery">
+
     {{#each this}}
       <li class="gallery-item">
         <div class="photo-card">
-            <img src="{{webformatURL}}" alt="{{type}}" />
+            <img class="gallery-img" src="{{webformatURL}}" alt="{{type}}" />
         
             <div class="stats">
                 <p class="stats-item">
@@ -25,4 +25,3 @@
         </div>
       </li>
     {{/each}}
-</ul>
