--- a/src/partials/load_more_button.html
+++ b/src/partials/load_more_button.html
@@ -1,1 +1,12 @@
-<button type='button' class='loadMoreButton'>Load more</button>
+<button type='button' class='button load-more-button'>Load more</button>
+<!-- <button type="button" class="btn btn-primary button" data-action="load-more">
+    <span class="spinner-border spinner-border-sm spinner is-hidden" role="status" aria-hidden="true"></span>
+
+    <span class="label">Показать ещё</span>
+</button> -->
+
+<button type="button" class="load-more-button button" data-action="load-more">
+    <span class="spinner-border spinner-border-sm spinner is-hidden" role="status" aria-hidden="true"></span>
+
+    <span class="label">Load more</span>
+</button>
