fixed load more btn

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,3 +7,5 @@
 @import './form';
 @import './common';
 @import './gallery';
+@import '@pnotify/core/dist/PNotify.css';
+// @import '@pnotify/mobile/dist/PNotifyMobile.css';
